slf4j instead Sout.println, uitests